fixed gif spacing

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -414,17 +414,17 @@ Media Formatting
 }
 
 .width-100 {
-    min-width: 105%;
+    width: 100%;
     max-width: 1000px;
     height: auto;
 }
 
 .close-left {
-    margin-left: -20% !important;
+    margin-left: 0% !important;
 }
 
 .close-right {
-    margin-right: -20% !important;
+    margin-right: 0% !important;
 }
 
 
